[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caqui"
version = "1.0.2"
authors = [
  { name="Douglas Cardoso", email="noemail@noemail.com" },
]
description = "Run asynchronous commands in WebDrivers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests",
  "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/douglasdcm/caqui"
"Bug Tracker" = "https://github.com/douglasdcm/caqui/issues"