[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
include = ["caqui*"]
exclude = ["tests*", "utils", ".vscode", ".git*", "dist"]

[project]
name = "caqui"
version = "2.0.0"
authors = [
  { name="Douglas Cardoso", email="noemail@noemail.com" },
]
description = "Run asynchronous commands in WebDrivers"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests",
  "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/douglasdcm/caqui"
"Bug Tracker" = "https://github.com/douglasdcm/caqui/issues"
